# kotatsu

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: chart-release.yml  ci.yml  helm-release.yml  release.yml
backend/: Cargo.toml
backend/src/: api.rs  config.rs  http.rs  lib.rs  main.rs  pagination.rs  schema.rs  state.rs
backend/src/storage/: cluster.rs  error.rs  groups.rs  keys.rs  mod.rs  model.rs  reader.rs  topics.rs
backend/tests/: groups_integration.rs  s3_integration.rs  schema_integration.rs
backend/tests/fixtures/: avro-offset-0.batch  group.json  meta.json  offset-0.batch  offset-2.batch  offset-4.batch  watermark.json
chart/kotatsu/: Chart.yaml  values.yaml
chart/kotatsu/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
frontend/: app.vue  dist  nuxt.config.ts  package-lock.json  package.json
frontend/components/: Spinner.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/groups/: [id].vue  index.vue
frontend/pages/schemas/: [subject].vue  index.vue
frontend/pages/topics/: [name].vue  index.vue
