[package]
name = "kotatsu"
version = "0.1.0"
edition = "2021"
description = "Read-only, on-demand browser over Tansu's native S3 storage"
license = "Apache-2.0"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
object_store = { version = "0.12", features = ["aws"] }
bytes = "1"
futures = "0.3"
# Kafka record-batch codec (sans-io). Pinned: tested against Tansu 0.6.x.
tansu-sans-io = "0.6"
# Schema registry (Kora) client + Avro decoding.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
apache-avro = "0.17"

# Used only by the #[ignore]-gated integration tests under tests/.
[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
object_store = { version = "0.12", features = ["aws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
apache-avro = "0.17"
bytes = "1"
serde_json = "1"

[profile.release]
strip = true
